Alterando BEFORE Request
